--- a/apps/festival/festival/src/app/dashboard/analytics/buyers/buyers-analytics.component.html
+++ b/apps/festival/festival/src/app/dashboard/analytics/buyers/buyers-analytics.component.html
@@ -1,4 +1,4 @@
-<h1>Buyers' Activity</h1>
+<h1>Buyers' Activities</h1>
 
 <section class="surface">
   <analytics-pie-chart class="surface" [data]="orgActivity$ | async"></analytics-pie-chart>
