--- a/libs/organization/src/lib/organization/forms/organization-form/organization-form.component.html
+++ b/libs/organization/src/lib/organization/forms/organization-form/organization-form.component.html
@@ -6,7 +6,7 @@
         <mat-card-title>Contact Information</mat-card-title>
       </mat-card-header>
       <mat-card-content fxLayout="column">
-        <article formGroupName="name">
+        <article>
           <mat-form-field appearance="outline">
             <!-- Here is missing an input for the public name of an organization,
             we always have to decide how we will handle that -->
