--- a/apps/festival/festival/src/app/dashboard/analytics/buyers/buyers-analytics.component.html
+++ b/apps/festival/festival/src/app/dashboard/analytics/buyers/buyers-analytics.component.html
@@ -1,7 +1,20 @@
-<h1>Buyers' Activities</h1>
 
 <section class="surface">
-  <analytics-pie-chart class="surface" [data]="orgActivity$ | async"></analytics-pie-chart>
+  <header>
+    <h1>Buyers' Activities</h1>
+    <a mat-icon-button routerLink="../title">
+      <span>See Titles' Activities</span>
+      <mat-icon svgIcon="arrow_forward"></mat-icon>
+    </a>
+  </header>
+  <a mat-icon-button routerLink="..">
+    <mat-icon svgIcon="arrow_back"></mat-icon>
+    <span>Back to Dashboard</span>
+  </a>
+  <article>
+    <analytics-pie-chart class="surface" [data]="orgActivity$ | async"></analytics-pie-chart>
+
+  </article>
 </section>
 
 <bf-table [source]="buyersAnalytics$ | async" pagination="5" useFilter clickable (rowClick)="goToBuyer($event)">
