--- a/libs/movie/src/lib/movie/form/media-videos/media-videos.component.html
+++ b/libs/movie/src/lib/movie/form/media-videos/media-videos.component.html
@@ -4,7 +4,7 @@
     <h3>Videos</h3>
     <section>
       <p>Upload videos such as a trailer, teaser, promo reel, etc.</p>
-      <bf-form-list [form]="videoList" listPosition="bottom" keepFormOpen reverseList>
+      <bf-form-list [form]="videoList" listPosition="bottom" keepFormOpen reverseList (removed)="removeFromQueue($event)">
         <ng-template itemRef let-video>
           {{ video.type | toLabel: 'hostedVideoTypes' }} - {{ video.title }} - {{ (video.storagePath | fileName) }}
         </ng-template>
