--- a/apps/festival/festival/src/app/dashboard/analytics/buyers/buyers-analytics.component.html
+++ b/apps/festival/festival/src/app/dashboard/analytics/buyers/buyers-analytics.component.html
@@ -1,4 +1,3 @@
-
 <section class="surface">
   <header>
     <h1>Buyers' Activities</h1>
@@ -13,7 +12,7 @@
   </a>
   <article>
     <analytics-pie-chart class="surface" [data]="orgActivity$ | async"></analytics-pie-chart>
-
+    <analytics-metric-card-list [cards]="aggregatedCards$ | async"></analytics-metric-card-list>
   </article>
 </section>
 
