Rename 'planes' by 'inflight'

--- a/libs/movie/src/lib/movie/form/additional-information/additional-information.component.html
+++ b/libs/movie/src/lib/movie/form/additional-information/additional-information.component.html
@@ -16,7 +16,7 @@
                 </static-select>
 
                 <static-select test-id="release-media" [control]="releaseForm.get('media')" scope="medias" fxFlex
-                  [withoutValues]="['payPerView', 'est', 'nVod','aVod', 'fVod', 'sVod', 'planes', 'boats', 'educational', 'rental','through', 'hotels']">
+                  [withoutValues]="['payPerView', 'est', 'nVod','aVod', 'fVod', 'sVod', 'tVod', 'inflight', 'boats', 'educational', 'rental','through', 'hotels']">
                   <mat-label>Release Media</mat-label>
                 </static-select>
               </div>
