--- a/libs/contract/src/lib/contract/holdback/selection-modal/selection-modal.component.html
+++ b/libs/contract/src/lib/contract/holdback/selection-modal/selection-modal.component.html
@@ -46,7 +46,7 @@
       <mat-form-field appearance="outline">
         <mat-label>Select Rights</mat-label>
         <static-group [formControl]="control.get('medias')" scope="medias" displayAll="All Rights" required
-          placeholder="Specify right(s) to filter" [withoutValues]="['theatrical']" test-id="medias">
+          placeholder="Specify right(s) to filter" test-id="medias">
         </static-group>
         <mat-error groupError *ngIf="control.get('medias').hasError('required')">This field is required</mat-error>
       </mat-form-field>
