8581 fix responsiveness and buttons

--- a/apps/festival/festival/src/app/dashboard/analytics/buyers/buyers-analytics.component.html
+++ b/apps/festival/festival/src/app/dashboard/analytics/buyers/buyers-analytics.component.html
@@ -1,12 +1,12 @@
 <section class="surface">
   <header>
     <h1>Buyers' Activities</h1>
-    <a mat-icon-button routerLink="../title">
+    <a mat-button routerLink="../title">
       <span>See Titles' Activities</span>
       <mat-icon svgIcon="arrow_forward"></mat-icon>
     </a>
   </header>
-  <a mat-icon-button routerLink="..">
+  <a mat-button routerLink="..">
     <mat-icon svgIcon="arrow_back"></mat-icon>
     <span>Back to Dashboard</span>
   </a>
