--- a/apps/festival/festival/src/app/dashboard/analytics/buyers/buyers-analytics.component.scss
+++ b/apps/festival/festival/src/app/dashboard/analytics/buyers/buyers-analytics.component.scss
@@ -11,38 +11,37 @@ section {
   gap: 24px;
   margin-bottom: 24px;
 
-  header{
+  header {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    h1{
+
+    h1 {
       margin: 0;
     }
   }
 
-  a{
-    display: flex;
-    align-items: center;
+  a {
+    width: fit-content;
   }
 
-  article{
+  article {
     display: flex;
     gap: 24px;
-  }
 
-  analytics-pie-chart, analytics-metric-card-list {
-    width: 50%;
-  }
-}
-
-
-@include layout-bp(lt-md) {
-  section {
-    flex-direction: column;
-    gap: 8px;
-    analytics-pie-chart, analytics-metric-card-list {
-      width: 100%;
+    analytics-pie-chart,
+    analytics-metric-card-list {
+      flex: 1;
     }
   }
 }
 
+@include layout-bp(xs) {
+  header {
+    flex-direction: column;
+  }
+  
+  article {
+    flex-direction: column;
+  }
+}
