refactor: reworded many accessibility messages and titles.

--- a/apps/festival/festival/src/app/dashboard/analytics/buyer/buyer-analytics.component.html
+++ b/apps/festival/festival/src/app/dashboard/analytics/buyer/buyer-analytics.component.html
@@ -28,7 +28,7 @@
 
   <article>
     <header>
-      <h3>Buyer was interested in these titles</h3>
+      <h3>Buyer was interested in these Titles</h3>
       <button mat-flat-button (click)="exportAnalytics()">Export Analytics</button>
     </header>
 
