--- a/apps/festival/festival/src/app/dashboard/home/home.component.html
+++ b/apps/festival/festival/src/app/dashboard/home/home.component.html
@@ -82,7 +82,7 @@
             <h3>Buyers' Insights</h3>
           </analytics-map>
 
-          <h3>Most active buyers</h3>
+          <h3>Most Active Buyers</h3>
           <bf-table
             [source]="activeBuyers$ | async"
             [filterValue]="selectedCountry"
