--- a/libs/analytics/src/lib/components/map/map.component.html
+++ b/libs/analytics/src/lib/components/map/map.component.html
@@ -1,8 +1,9 @@
 <header>
   <ng-content select="mat-icon"></ng-content>
   <ng-content select="h3, h5"></ng-content>
-  <button mat-icon-button *ngIf="selected" (click)="toggleSelect(selected)" matTooltip="Remove selection">
+  <button mat-icon-button *ngIf="selected" (click)="toggleSelect(selected)" matTooltip="Reset to World">
     <mat-icon svgIcon="refresh_filters"></mat-icon>
+    <span>Reset to World</span>
   </button>
 </header>
 <ng-content select="p"></ng-content>
