8512 top 5 in bar chart and cursor on metric card

--- a/libs/analytics/src/lib/components/metric-card-list/metric-card-list.component.html
+++ b/libs/analytics/src/lib/components/metric-card-list/metric-card-list.component.html
@@ -1,6 +1,6 @@
 <ul>
   <li *ngFor="let card of cards">
-    <button (click)="toggleSelect(card.title)" class="surface mat-body-2" [ngClass]="card.selected ? 'selected' : null">
+    <button (click)="toggleSelect(card.title)" class="surface mat-body-2" [ngClass]="{ 'selected': card.selected, 'selectable': selectable }">
       <header>
         <mat-icon [svgIcon]="card.icon"></mat-icon>
       </header>
