--- a/libs/analytics/src/lib/components/metric-card-list/metric-card-list.component.scss
+++ b/libs/analytics/src/lib/components/metric-card-list/metric-card-list.component.scss
@@ -14,6 +14,10 @@ ul {
     text-align: center;
     cursor: pointer;
 
+    .selectable {
+      cursor: pointer;
+    }
+
     header {
       background-color: var(--primary-lighter);
       border-radius: 4px;
