--- a/apps/festival/festival/src/app/dashboard/analytics/buyers/buyers-analytics.component.html
+++ b/apps/festival/festival/src/app/dashboard/analytics/buyers/buyers-analytics.component.html
@@ -29,6 +29,9 @@
   <ng-template colRef="org.activity" label="Activity" let-activity sort>
     {{ activity | toLabel:'orgActivity' }}
   </ng-template>
+  <ng-template colRef="pageView" label="# Title Page Views" let-pageView sort>
+    {{ pageView }}
+  </ng-template>
   <ng-template colRef="addedToWishlist" label="Titles in Wishlist" let-wishlist sort>
     {{ wishlist }}
   </ng-template>
