--- a/apps/festival/festival/src/app/dashboard/analytics/buyer/buyer-analytics.component.html
+++ b/apps/festival/festival/src/app/dashboard/analytics/buyer/buyer-analytics.component.html
@@ -73,31 +73,33 @@
 
   <article>
     <h3>Screenings Buyer has participated</h3>
-    <analytics-metric-card-list [cards]="aggregatedScreeningCards$ | async"></analytics-metric-card-list>
+    <article class="surface">
+      <analytics-metric-card-list [cards]="aggregatedScreeningCards$ | async"></analytics-metric-card-list>
 
-    <header>
-      <h4>Attended Screenings</h4>
-      <button mat-button color="primary" (click)="exportScreenerAnalytics()">
-        <mat-icon svgIcon="cloud_download"></mat-icon>
-        <span>Export to CSV</span>
-      </button>
-    </header>
-    <bf-table [source]="invitations$ | async" pagination="5">
-      <ng-template colRef="event.movie.title.international" label="Title" let-title sort>
-        {{ title | maxLength: 50 }}
-      </ng-template>
-      <ng-template colRef="status" label="Invitation" let-status sort>
-        {{ status | titlecase }}
-      </ng-template>
-      <ng-template colRef="mode" label="Request to Participate" let-mode sort>
-        {{ mode | titlecase }}
-      </ng-template>
-      <ng-template colRef="analytics.length" label="Screening Requests" let-requests sort>
-        {{ requests }}
-      </ng-template>
-      <ng-template colRef="watchTime" label="Watch Time" let-watchTime>
-        {{ watchTime * 1000 | duration: '0min' }}
-      </ng-template>
-    </bf-table>
+      <header>
+        <h4>Attended Screenings</h4>
+        <button mat-button color="primary" (click)="exportScreenerAnalytics()">
+          <mat-icon svgIcon="cloud_download"></mat-icon>
+          <span>Export to CSV</span>
+        </button>
+      </header>
+      <bf-table [source]="invitations$ | async" pagination="5">
+        <ng-template colRef="event.movie.title.international" label="Title" let-title sort>
+          {{ title | maxLength: 50 }}
+        </ng-template>
+        <ng-template colRef="status" label="Invitation" let-status sort>
+          {{ status | titlecase }}
+        </ng-template>
+        <ng-template colRef="mode" label="Request to Participate" let-mode sort>
+          {{ mode | titlecase }}
+        </ng-template>
+        <ng-template colRef="analytics.length" label="Screening Requests" let-requests sort>
+          {{ requests }}
+        </ng-template>
+        <ng-template colRef="watchTime" label="Watch Time" let-watchTime>
+          {{ watchTime * 1000 | duration: '0min' }}
+        </ng-template>
+      </bf-table>
+  </article>
   </article>
 </section>
