--- a/apps/festival/festival/src/app/dashboard/home/home.component.html
+++ b/apps/festival/festival/src/app/dashboard/home/home.component.html
@@ -80,7 +80,7 @@
           >
             <mat-icon svgIcon="buyer_insights"></mat-icon>
             <h3>Buyers' Insights</h3>
-            <h4><b>TOP 5 COUNTRIES</b></h4>
+download            <h4 listTitle><b>TOP 5 COUNTRIES</b></h4>
           </analytics-map>
 
           <h3>Most Active Buyers</h3>
