--- a/apps/crm/crm/src/app/crm/components/invitation-list/invitation-list.component.html
+++ b/apps/crm/crm/src/app/crm/components/invitation-list/invitation-list.component.html
@@ -2,7 +2,7 @@
   <ng-template colRef="id" label="Id" let-invitId>
     {{ invitId }}
   </ng-template>
-  <ng-template colRef="org" label="Organization" let-org>
+  <ng-template colRef="org" label="Organization" let-org [filter]="filters.invitationListOrgName">
     <a [routerLink]="['/c/o/dashboard/crm/organization', org.id]">
       <span>{{ org | orgName:'long' }} </span>
       <mat-icon svgIcon="visibility"></mat-icon>
@@ -11,13 +11,13 @@
   <ng-template label="Event Title" colRef="event.title" let-title>
     {{ title }}
   </ng-template>
-  <ng-template colRef="event.start" label="Event start" let-start sort>
+  <ng-template colRef="event.start" label="Event start" let-start [sort]="sorts.byDate">
     {{ start | date: 'medium'}}
   </ng-template>
-  <ng-template colRef="event.end" label="Event end" let-end sort>
+  <ng-template colRef="event.end" label="Event end" let-end [sort]="sorts.byDate">
     {{ end | date: 'medium'}}
   </ng-template>
-  <ng-template label="Event Type" colRef="event.type" let-type>
+  <ng-template label="Event Type" colRef="event.type" let-type sort>
     {{ type | titlecase }}
   </ng-template>
   <ng-template colRef="movie" label="Movie" let-movie>
@@ -35,7 +35,7 @@
   <ng-template colRef="event.accessibility" label="Accessibility" let-accessibility sort>
     {{ accessibility | toLabel:'accessibility' }}
   </ng-template>
-  <ng-template colRef="guestOrg" label="Guest org" let-guestOrg>
+  <ng-template colRef="guestOrg" label="Guest org" let-guestOrg [filter]="filters.invitationListGuestOrgName">
     <ng-container *ngIf="guestOrg else noOrg">
       <a [routerLink]="['/c/o/dashboard/crm/organization', guestOrg.id]">
         <span>{{ guestOrg | orgName:'long' }} </span>
@@ -44,7 +44,7 @@
     </ng-container>
     <ng-template #noOrg>--</ng-template>
   </ng-template>
-  <ng-template colRef="date" label="Invitation date" let-date sort>
+  <ng-template colRef="date" label="Invitation date" let-date [sort]="sorts.byDate">
     {{ date | date: 'medium'}}
   </ng-template>
   <ng-template colRef="mode" label="Mode" let-mode sort>
