--- a/libs/analytics/src/lib/components/map/map.component.scss
+++ b/libs/analytics/src/lib/components/map/map.component.scss
@@ -62,4 +62,8 @@ mat-spinner {
   section.horizontal {
     flex-direction: column;
   }
+  aside.horizontal {
+    width: 100%;
+    margin-right: 0px;
+  }
 }
