--- a/apps/festival/festival/src/app/dashboard/home/home.component.scss
+++ b/apps/festival/festival/src/app/dashboard/home/home.component.scss
@@ -71,9 +71,19 @@ analytics-map h3 {
   width: fit-content;
 }
 
+.surface analytics-map{
+  mat-icon, h3{
+    margin-bottom:16px;
+  }
+}
+
 article[header] {
   display: flex;
   align-items: center;
+  margin-bottom: 16px;
+}
+
+.hey{
   margin-bottom: 16px;
 }
 
