--- a/apps/festival/festival/src/app/dashboard/analytics/title/title-analytics.component.html
+++ b/apps/festival/festival/src/app/dashboard/analytics/title/title-analytics.component.html
@@ -47,7 +47,7 @@
     </div>
   </article>
 
-  <bf-table [source]="buyerAnalytics$ | async" pagination="5" useFilter [filterValue]="filterValue">
+  <bf-table [source]="buyerAnalytics$ | async" pagination="5" useFilter [filterValue]="filterValue" (rowClick)="viewBuyerActivity($event)">
     <ng-template colRef="user" label="Name" let-user sort>
       <a [href]="'mailto:' + user?.email">{{ user | displayName }}</a>
     </ng-template>
