--- a/apps/festival/festival/src/app/dashboard/home/home.component.html
+++ b/apps/festival/festival/src/app/dashboard/home/home.component.html
@@ -72,7 +72,7 @@
           <analytics-map
             class="margin-bottom"
             [data]="activeCountries$ | async"
-            (selection)="selectedCountry = $event"
+            (selection)="selectCountry($event)"
             [topCount]="5"
             horizontal
             showLegend
@@ -82,7 +82,7 @@
             <h3>Buyers' Insights</h3>
           </analytics-map>
 
-          <h3>Most active buyers</h3>
+          <h3 #tableTitle>Most active buyers</h3>
           <bf-table
             [source]="activeBuyers$ | async"
             [filterValue]="selectedCountry"
