--- a/libs/analytics/src/lib/components/metric-card-list/metric-card-list.component.html
+++ b/libs/analytics/src/lib/components/metric-card-list/metric-card-list.component.html
@@ -1,3 +1,10 @@
+<mat-icon
+  class="refresh_icon"
+  svgIcon="refresh_filters"
+  *ngIf="canShowReset"
+  matTooltip="Reset selection"
+  (click)="toggleSelect('')"
+></mat-icon>
 <ul>
   <li *ngFor="let card of cards">
     <button (click)="toggleSelect(card.title)" class="surface mat-body-2" [ngClass]="{ 'selected': card.selected, 'selectable': selectable }">
