added chart descriptive text.

--- a/apps/festival/festival/src/app/dashboard/analytics/buyer/buyer-analytics.component.html
+++ b/apps/festival/festival/src/app/dashboard/analytics/buyer/buyer-analytics.component.html
@@ -64,10 +64,13 @@
   </article>
 
   <article class="surface graphs">
-    <analytics-bar-chart [data]="totalAnalyticsPerTitle$ | async"></analytics-bar-chart>
+    <analytics-bar-chart [data]="totalAnalyticsPerTitle$ | async">
+      <p><small>Learn what Titles this particular Buyer viewed</small></p>
+    </analytics-bar-chart>
     <analytics-pie-chart class="surface" [data]="aggregatedPerGenre$ | async">
       <mat-icon svgIcon="theater_comedy"></mat-icon>
       <h5>Genres Tendancy</h5>
+      <p><small>This Buyer was mostly interested in these Genres</small></p>
     </analytics-pie-chart>
   </article>
 
