--- a/apps/festival/festival/src/app/dashboard/home/home.component.html
+++ b/apps/festival/festival/src/app/dashboard/home/home.component.html
@@ -78,8 +78,8 @@
             showLegend
             selectable
           >
-            <mat-icon svgIcon="buyer_insights"></mat-icon>
-            <h3>Buyers' Insights</h3>
+            <mat-icon class="title_margin" svgIcon="buyer_insights"></mat-icon>
+            <h3 class="title_margin">Buyers' Insights</h3>
             <h4 listTitle><b>TOP 5 COUNTRIES</b></h4>
           </analytics-map>
 
