--- a/apps/crm/crm/src/app/crm/pages/user/user.component.html
+++ b/apps/crm/crm/src/app/crm/pages/user/user.component.html
@@ -131,13 +131,13 @@
 </section>
 
 <bf-table *ngIf="invitations | async as invitations" [source]="invitations" useFilter pagination="50">
-  <ng-template colRef label="Date Created" let-event [sort]="[sorts.byDate, 'date']">
+  <ng-template colRef="date" label="Date Created" let-date let-event="item" [sort]="sorts.byDate">
     <a [routerLink]="getLink(event)">
-      <u>{{ event.date | date: 'short' }}</u>
+      <u>{{ date | date: 'short' }}</u>
     </a>
   </ng-template>
-  <ng-template colRef="event" label="Event Name" let-event [sort]="[sorts.defaultSort, 'event.title']" [filter]="filters.invitationEventName">
-    {{ event.title }}
+  <ng-template colRef="event.title" label="Event Name" let-title [sort]="sorts.defaultSort" [filter]="filters.invitationEventName">
+    {{ title }}
   </ng-template>
   <ng-template colRef="mode" label="Mode" let-mode sort>
     {{mode}}
