--- a/apps/festival/festival/src/app/dashboard/home/home.component.html
+++ b/apps/festival/festival/src/app/dashboard/home/home.component.html
@@ -80,7 +80,7 @@
           >
             <mat-icon class="title_margin" svgIcon="buyer_insights"></mat-icon>
             <h3 class="title_margin">Buyers' Insights</h3>
-            <h4 listTitle><b>TOP 5 COUNTRIES</b></h4>
+            <h4 listTitle>TOP 5 COUNTRIES</h4>
           </analytics-map>
 
           <h3>Most Active Buyers</h3>
