refactor: update variable name

--- a/libs/analytics/src/lib/components/metric-card-list/metric-card-list.component.html
+++ b/libs/analytics/src/lib/components/metric-card-list/metric-card-list.component.html
@@ -1,7 +1,7 @@
 <mat-icon
   class="refresh_icon"
   svgIcon="refresh_filters"
-  *ngIf="canShowReset"
+  *ngIf="showReset"
   matTooltip="Reset selection"
   (click)="toggleSelect('')"
 ></mat-icon>
