--- a/apps/catalog/catalog/src/app/dashboard/title/list/list.component.html
+++ b/apps/catalog/catalog/src/app/dashboard/title/list/list.component.html
@@ -26,9 +26,9 @@
     </header>
 
     <bf-table [source]="result$ | async" useFilter pagination="50">
-      <ng-template colRef label="Title" let-movie sort defaultSort [filter]="filters.movieTitle">
-        <a [routerLink]="movie.id" [matTooltip]="movie.title.international">
-          <u>{{ movie.title.international | maxLength:50 }}</u>
+      <ng-template colRef="title.international" label="Title" let-title let-movie="item" sort defaultSort [filter]="filters.movieTitle">
+        <a [routerLink]="movie.id" [matTooltip]="title">
+          <u>{{ title | maxLength:50 }}</u>
         </a>
       </ng-template>
       <ng-template colRef="directors" label="Director(s)" let-directors>
