--- a/apps/crm/crm/src/app/crm/pages/organizations/organizations.component.html
+++ b/apps/crm/crm/src/app/crm/pages/organizations/organizations.component.html
@@ -30,8 +30,8 @@
     <ng-template colRef="addresses.main.country" label="Country" let-country>
       {{ country ?? '--' | titlecase }}
     </ng-template>
-    <ng-template colRef label="Status" sort let-org>
-      {{ org.status | toLabel: 'organizationStatus' }}
+    <ng-template colRef="status" label="Status" sort let-status>
+      {{ status | toLabel: 'organizationStatus' }}
     </ng-template>
     <ng-template colRef="activity" sort let-activity>
       {{ activity | toLabel: 'orgActivity'}}
@@ -43,8 +43,8 @@
         </ng-container>
       </ul>
     </ng-template>
-    <ng-template colRef label="Action" let-org sticky>
-      <a target="_blank" [routerLink]="['/c/o/dashboard/crm/organization', org.id]">
+    <ng-template colRef="id" label="Action" let-orgId sticky>
+      <a target="_blank" [routerLink]="['/c/o/dashboard/crm/organization', orgId]">
         <mat-icon svgIcon="launch"></mat-icon>
       </a>
     </ng-template>
