--- a/apps/festival/festival/src/app/dashboard/analytics/buyer/buyer-analytics.component.html
+++ b/apps/festival/festival/src/app/dashboard/analytics/buyer/buyer-analytics.component.html
@@ -65,12 +65,12 @@
 
   <article class="surface graphs">
     <analytics-bar-chart [data]="totalAnalyticsPerTitle$ | async">
-      <p><small>Learn what Titles this particular Buyer viewed</small></p>
+      <p>Learn what Titles this particular Buyer viewed</p>
     </analytics-bar-chart>
     <analytics-pie-chart class="surface" [data]="aggregatedPerGenre$ | async">
       <mat-icon svgIcon="theater_comedy"></mat-icon>
       <h5>Genres Tendancy</h5>
-      <p><small>This Buyer was mostly interested in these Genres</small></p>
+      <p>This Buyer was mostly interested in these Genres</p>
     </analytics-pie-chart>
   </article>
 
