Refactoring sort, filter and correct used sorts functions

--- a/apps/crm/crm/src/app/crm/components/guest-table/guest-table.component.html
+++ b/apps/crm/crm/src/app/crm/components/guest-table/guest-table.component.html
@@ -2,7 +2,7 @@
   <ng-template colRef="id" label="Id" let-invitId>
     {{ invitId }}
   </ng-template>
-  <ng-template colRef="date" label="Invitation date" let-date [sort]="sorts.byDate">
+  <ng-template colRef="date" label="Invitation date" let-date [sort]="sorts.defaultSort">
     {{ date | date: 'medium'}}
   </ng-template>
   <ng-template colRef="guestOrg" label="Guest org" let-guestOrg>
