--- a/apps/crm/crm/src/app/crm/pages/events/events.component.html
+++ b/apps/crm/crm/src/app/crm/pages/events/events.component.html
@@ -17,10 +17,10 @@
     <ng-template colRef="type" label="Type" let-type sort>
       {{type}}
     </ng-template>
-    <ng-template colRef="start" label="Start" let-start [sort]="sorts.byDate">
+    <ng-template colRef="start" label="Start" let-start [sort]="sorts.defaultSort">
       {{ start | date: 'medium'}}
     </ng-template>
-    <ng-template colRef="end" label="End" let-end [sort]="sorts.byDate">
+    <ng-template colRef="end" label="End" let-end [sort]="sorts.defaultSort">
       {{ end | date: 'medium'}}
     </ng-template>
     <ng-template colRef="hostedBy" label="Hosted by" let-hostedBy sort>
