--- a/apps/crm/crm/src/app/crm/pages/organization/organization.component.html
+++ b/apps/crm/crm/src/app/crm/pages/organization/organization.component.html
@@ -74,8 +74,8 @@
         <ng-template colRef="title.international" label="International title" let-international sort>
           {{ international | maxLength:50 }}
         </ng-template>
-        <ng-template colRef="release.year" label="Release year" let-release [sort]="sorts.defaultSortByOneValue">
-          {{ release }}
+        <ng-template colRef="release.year" label="Release year" let-releaseYear [sort]="sorts.defaultSort">
+          {{ releaseYear }}
         </ng-template>
         <ng-template colRef="app" label="Status" let-appAccess>
           <ul>
