--- a/apps/crm/crm/src/app/crm/pages/user/user.component.html
+++ b/apps/crm/crm/src/app/crm/pages/user/user.component.html
@@ -131,12 +131,12 @@
 </section>
 
 <bf-table *ngIf="invitations | async as invitations" [source]="invitations" useFilter pagination="50">
-  <ng-template colRef="date" label="Date Created" let-date let-event="item" [sort]="sorts.byDate">
+  <ng-template colRef="date" label="Date Created" let-date let-event="item" [sort]="sorts.defaultSort">
     <a [routerLink]="getLink(event)">
       <u>{{ date | date: 'short' }}</u>
     </a>
   </ng-template>
-  <ng-template colRef="event.title" label="Event Name" let-title [sort]="sorts.defaultSort" [filter]="filters.invitationEventName">
+  <ng-template colRef="event.title" label="Event Name" let-title [sort]="sorts.defaultSort">
     {{ title }}
   </ng-template>
   <ng-template colRef="mode" label="Mode" let-mode sort>
@@ -145,7 +145,7 @@
   <ng-template colRef="type" label="Type" let-type sort>
     {{type}}
   </ng-template>
-  <ng-template colRef="fromOrg.denomination.full" label="From Organization" let-full sort [filter]="filters.invitationOrgName">
+  <ng-template colRef="fromOrg.denomination.full" label="From Organization" let-full sort>
     {{full}}
   </ng-template>
   <ng-template colRef="toOrg.denomination.full" label="To Organization" let-full sort>
