refactor: used correct formatting.

--- a/libs/analytics/src/lib/components/metric-card-list/metric-card-list.component.html
+++ b/libs/analytics/src/lib/components/metric-card-list/metric-card-list.component.html
@@ -1,9 +1,7 @@
 <article>
-  <ng-container *ngIf="selected">
-    <button mat-icon-button (click)="toggleSelect('')" matTooltip="Reset selection" class="refresh_icon">
-      <mat-icon svgIcon="refresh_filters"></mat-icon>
-    </button>
-  </ng-container>
+  <button *ngIf="selected" mat-icon-button (click)="toggleSelect('')" matTooltip="Reset selection" class="refresh_icon">
+    <mat-icon svgIcon="refresh_filters"></mat-icon>
+  </button>
 </article>
 <ul>
   <li *ngFor="let card of cards">
